# live-bootcamp-project

./: NOTES.md  compose.yml  docker.sh
.github/workflows/: prod.yml
app-service/: Dockerfile
auth-service/: Cargo.toml  Dockerfile
auth-service/src/: app_state.rs  lib.rs  main.rs
auth-service/src/app_state/: mod.rs
auth-service/src/domain/: data_stores.rs  email.rs  error.rs  login_attempt_id.rs  mod.rs  password.rs  token.rs  two_fa_code.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_2fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mod.rs  postmark_email_client.rs
auth-service/src/services/data_stores/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  constants.rs
auth-service/tests/api/: helpers.rs  login.rs  login_test.rs  logout.rs  logout_test.rs  main.rs  root_test.rs  signup.rs  signup_test.rs  test_helpers.rs  verify_2fa.rs  verify_2fa_test.rs  verify_token.rs  verify_token_test.rs
