[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["cookie"] }
chrono = "0.4.43"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
lazy_static = "1.5.0"
reqwest = { version = "0.13.1", default-features = false, features = ["cookies", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
validator = { version = "=0.20.0", features = ["derive"] }

[dev-dependencies]
fake = "=4.4.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
rand = "0.9.2"
